# ats-resume-coach

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
ats_resume_coach/: __init__.py  analyzer.py  api.py  cli.py  config.py  ingest.py  local_model.py  rewriter.py  schemas.py  taxonomy.py  text.py
ats_resume_coach/training/: __init__.py  datasets.py  model.py  profile.py
ats_resume_coach/web/static/: style.css
ats_resume_coach/web/templates/: index.html
scripts/: check_no_private_data.py  install_git_hooks.sh  pre-commit
tests/: test_analyzer.py  test_ingest.py  test_privacy_check.py  test_rewriter.py  test_training_model.py  test_web_flow.py
