[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-resume-coach"
version = "0.1.0"
description = "ATS resume critique service for intern and entry-level candidates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maria" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "pypdf>=4.2",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "requests>=2.32",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
]
ml = [
  "joblib>=1.4",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "scikit-learn>=1.5",
]

[project.scripts]
ats-resume-coach = "ats_resume_coach.cli:main"

[tool.setuptools.packages.find]
include = ["ats_resume_coach*"]

[tool.setuptools.package-data]
ats_resume_coach = ["web/templates/*.html", "web/static/*.css"]

